--- a/src/index.css
+++ b/src/index.css
@@ -77,6 +77,7 @@
 html {
   font-size: 16px;
   -webkit-text-size-adjust: 100%;
+  overflow-x: hidden;
 }
 
 body {
